--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "discordbot",
   "version": "1.0.0",
   "description": "",
-  "main": "mybot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node mybot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.2",
+    "discord.js": "^11.3.2"
   }
 }
